--- a/.github/workflows/build-pdf.yml
+++ b/.github/workflows/build-pdf.yml
@@ -12,7 +12,7 @@ jobs:
       - name: Checkout Repository
         uses: actions/checkout@v4
         with:
-          token: ${{ secrets.GITHUB_TOKEN }}  # default token is sufficient for committing back
+          token: ${{ secrets.GITHUB_TOKEN }}
 
       # Step 2: Compile LaTeX Document
       - name: Compile LaTeX Documents
@@ -20,18 +20,49 @@ jobs:
         with:
           root_file: tc9_latest.tex
 
-      # Step 3: Create Timestamped PDF folder and Move PDF
-      - name: Timestamp and Move PDF
+      # Step 3: Compute Hash of the New PDF
+      - name: Compute PDF Hash
         run: |
-          TIMESTAMP=$(date -u +"%Y-%m-%d_%H-%M-%S")
-          mkdir -p pdf
-          cp tc9_latest.pdf pdf/tc9_latest_${TIMESTAMP}.pdf
+          mkdir -p pdf  # Ensure history folder exists
+          SHA_NEW=$(sha256sum tc9_latest.pdf | awk '{print $1}')
+          
+          # Check if previous version exists
+          if [ -f tc9_latest.pdf ]; then
+            SHA_OLD=$(sha256sum tc9_latest.pdf | awk '{print $1}')
+          else
+            SHA_OLD=""
+          fi
 
-      # Step 4: Commit and Push PDF to Repository
+          echo "SHA_NEW=${SHA_NEW}" >> $GITHUB_ENV
+          echo "SHA_OLD=${SHA_OLD}" >> $GITHUB_ENV
+
+      # Step 4: Move and Save PDF if it has changed
+      - name: Save Latest PDF and Keep History
+        run: |
+          if [ "$SHA_NEW" != "$SHA_OLD" ]; then
+            TIMESTAMP=$(date -u +"%Y-%m-%d_%H-%M-%S")
+            
+            # Backup old version if exists
+            if [ -f tc9_latest.pdf ]; then
+              mv tc9_latest.pdf "pdf/tc9_${TIMESTAMP}.pdf"
+            fi
+
+            # Move new PDF to root
+            mv tc9_latest.pdf tc9_latest.pdf
+
+            echo "PDF has changed, updating repository..."
+            echo "CHANGED=true" >> $GITHUB_ENV
+          else
+            echo "No content change detected, skipping commit."
+            echo "CHANGED=false" >> $GITHUB_ENV
+          fi
+
+      # Step 5: Commit and Push Changes (Only if content changed)
       - name: Commit and Push Changes
+        if: env.CHANGED == 'true'
         run: |
           git config --global user.name 'github-actions[bot]'
           git config --global user.email 'github-actions[bot]@users.noreply.github.com'
-          git add pdf/
-          git commit -m "Add PDF generated on $(date -u +"%Y-%m-%d %H:%M:%S UTC")" || echo "No changes to commit"
+          git add tc9_latest.pdf pdf/
+          git commit -m "Updated PDF: $(date -u +"%Y-%m-%d %H:%M:%S UTC")"
           git push origin main
